--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
       - NOTION_API_TOKEN=${NOTION_API_TOKEN}
       - NOTION_DATABASE_ID=${NOTION_DATABASE_ID}
       - DISCORD_WEBHOOK_URL=${DISCORD_WEBHOOK_URL}
-      - RUN_ON_STARTUP=false
+      - RUN_ON_STARTUP=true
     volumes:
       - ./config.yaml:/etc/config/notion-notifier/config.yaml:ro
     restart: unless-stopped
